--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "@guan/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev-grpc": "cross-env NODE_ENV=dev PORT=3000 nx serve grpc"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@nx/js": "22.4.2",
+    "@nx/maven": "22.4.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -14,5 +16,8 @@
     "prettier": "~3.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2"
+  },
+  "dependencies": {
+    "cross-env": "^10.1.0"
   }
 }
