feat: modular monolith app trading simlulation app

--- a/apps/grpc/modules/user-service/src/main/resources/application-dev.properties
+++ b/apps/grpc/modules/user-service/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 # User Service - Dev Profile
+spring.application.name=USER-SERVICE
 server.port=9090
 spring.grpc.server.port=9092
 
@@ -12,6 +13,7 @@ spring.h2.console.path=/h2-console
 
 # Logging
 logging.level.com.gx.user=DEBUG
+logging.pattern.console=%clr(🔵 [${spring.application.name:}]){bright_blue} %clr(%d{HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}){yellow} %clr(${PID:}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}
 
 # SQL Initialization
 spring.sql.init.mode=always
