--- a/apps/grpc/modules/aggregator-service/pom.xml
+++ b/apps/grpc/modules/aggregator-service/pom.xml
@@ -15,6 +15,25 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.guan</groupId>
+            <artifactId>proto-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- gRPC Dependencies -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-stub</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-protobuf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.grpc</groupId>
+            <artifactId>spring-grpc-spring-boot-starter</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
