--- a/apps/grpc/modules/aggregator-service/src/main/resources/application-dev.properties
+++ b/apps/grpc/modules/aggregator-service/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 # Aggregator Service - HTTP + gRPC Client
+spring.application.name=AGGREGATOR-SERVICE
 server.port=3001
 
 # gRPC Client Configuration for user-service
@@ -16,12 +17,7 @@ spring.grpc.client.channels.user-service.idle-timeout=5m
 spring.grpc.client.channels.user-service.max-inbound-message-size=4194304B
 spring.grpc.client.channels.user-service.max-inbound-metadata-size=8192B
 
-# gRPC Client Configuration for stock-service
-spring.grpc.client.channels.stock-service.address=static://localhost:9091
-spring.grpc.client.channels.stock-service.negotiation-type=plaintext
-spring.grpc.client.channels.stock-service.keep-alive-time=30s
-spring.grpc.client.channels.stock-service.keep-alive-timeout=10s
-
 # Logging
 logging.level.com.gx.aggregator=INFO
 logging.level.io.grpc=DEBUG
+logging.pattern.console=%clr(🟢 [${spring.application.name:}]){bright_green} %clr(%d{HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}){yellow} %clr(${PID:}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}
