--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "license": "MIT",
   "scripts": {
     "grpc:serve": "nx run grpc:serve",
+    "grpc:serve:all": "nx run grpc:serve",
     "grpc:serve:user": "nx run grpc:serve:user",
     "grpc:serve:aggregator": "nx run grpc:serve:aggregator",
+    "grpc:serve:stock": "nx run grpc:serve:stock",
+    "grcp:serve:all": "nx run grpc:serve",
     "grpc:build": "cross-env \"nx run grpc:clean && nx run grpc:build\"",
     "grpc:test": "nx run grpc:test",
     "grpc:clean": "nx run grpc:clean",
