--- a/package.json
+++ b/package.json
@@ -59,7 +59,12 @@
     "@angular/forms": "~21.1.0",
     "@angular/platform-browser": "~21.1.0",
     "@angular/router": "~21.1.0",
+    "@primeuix/themes": "^2.0.3",
+    "@tailwindcss/postcss": "^4.1.18",
     "cross-env": "^10.1.0",
-    "rxjs": "~7.8.0"
+    "postcss": "^8.5.6",
+    "primeng": "^21.1.1",
+    "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.18"
   }
 }
