--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/cli": "~21.1.0",
     "@angular/compiler-cli": "~21.1.0",
     "@angular/language-service": "~21.1.0",
+    "@bufbuild/buf": "^1.64.0",
+    "@bufbuild/protoc-gen-es": "^1.10.1",
+    "@connectrpc/protoc-gen-connect-es": "^1.7.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "22.4.4",
     "@nx/devkit": "22.4.4",
@@ -53,16 +56,21 @@
     "vitest": "^4.0.8"
   },
   "dependencies": {
+    "@angular/animations": "~21.1.2",
     "@angular/common": "~21.1.0",
     "@angular/compiler": "~21.1.0",
     "@angular/core": "~21.1.0",
     "@angular/forms": "~21.1.0",
     "@angular/platform-browser": "~21.1.0",
     "@angular/router": "~21.1.0",
+    "@bufbuild/protobuf": "^1.10.1",
+    "@connectrpc/connect": "^1.7.0",
+    "@connectrpc/connect-web": "^1.7.0",
     "@primeuix/themes": "^2.0.3",
     "@tailwindcss/postcss": "^4.1.18",
     "cross-env": "^10.1.0",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "primeng": "^21.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18"
