--- a/apps/grpc-angular-e2e/tsconfig.json
+++ b/apps/grpc-angular-e2e/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "outDir": "../../dist/out-tsc",
     "sourceMap": false,
-    "module": "commonjs",
+    "module": "preserve",
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
