--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "springbootup:serve": "nx run springbootup:serve",
     "springbootup:build": "cross-env \"nx run springbootup:clean && nx run springbootup:build\"",
     "springbootup:test": "nx run springbootup:test",
-    "springbootup:clean": "nx run springbootup:clean"
+    "springbootup:clean": "nx run springbootup:clean",
+    "grpc-angular:serve": "nx run grpc-angular:serve",
+    "grpc-angular:serve-static": "nx run grpc-angular:serve-static",
+    "grpc-angular:build": "nx run grpc-angular:build",
+    "grpc-angular:test": "nx run grpc-angular:test"
   },
   "private": true,
   "devDependencies": {
@@ -26,8 +30,7 @@
     "@angular/compiler-cli": "~21.1.0",
     "@angular/language-service": "~21.1.0",
     "@bufbuild/buf": "^1.64.0",
-    "@bufbuild/protoc-gen-es": "^1.10.1",
-    "@connectrpc/protoc-gen-connect-es": "^1.7.0",
+    "@bufbuild/protoc-gen-es": "^2.11.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "22.4.4",
     "@nx/devkit": "22.4.4",
@@ -63,9 +66,9 @@
     "@angular/forms": "~21.1.0",
     "@angular/platform-browser": "~21.1.0",
     "@angular/router": "~21.1.0",
-    "@bufbuild/protobuf": "^1.10.1",
-    "@connectrpc/connect": "^1.7.0",
-    "@connectrpc/connect-web": "^1.7.0",
+    "@bufbuild/protobuf": "^2.11.0",
+    "@connectrpc/connect": "^2.1.1",
+    "@connectrpc/connect-web": "^2.1.1",
     "@primeuix/themes": "^2.0.3",
     "@tailwindcss/postcss": "^4.1.18",
     "cross-env": "^10.1.0",
@@ -74,5 +77,9 @@
     "primeng": "^21.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18"
-  }
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "packageManager": "pnpm@10.22.0"
 }
