--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "grpc:serve": "nx run grpc:serve",
-    "grpc:serve:all": "nx run grpc:serve",
     "grpc:serve:user": "nx run grpc:serve:user",
     "grpc:serve:aggregator": "nx run grpc:serve:aggregator",
     "grpc:serve:stock": "nx run grpc:serve:stock",
-    "grcp:serve:all": "nx run grpc:serve",
+    "grpc:serve:envoy": "nx run grpc:envoy:up",
+    "grpc:serve:all": "nx run grpc:serve:all",
     "grpc:build": "cross-env \"nx run grpc:clean && nx run grpc:build\"",
     "grpc:test": "nx run grpc:test",
     "grpc:clean": "nx run grpc:clean",
