--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "primeicons": "^7.0.0",
     "primeng": "^21.1.1",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-primeui": "^0.6.1"
   },
   "engines": {
     "node": ">=20.0.0"
