--- a/apps/springbootup/src/main/resources/application.properties
+++ b/apps/springbootup/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=springbootup
+server.port=8080
+
+# Enable CORS for Angular frontend
+spring.web.cors.allowed-origins=http://localhost:4200
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
 # Enable the health endpoint
 management.endpoint.health.enabled=true
 
